# modali

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  bindings.json  bindings.ron  bindings.toml  devenv.nix  flake.nix  hello  main.c  makefile  modali  style.css
src/: gui.rs  input.rs  main.rs  parser.rs  util.rs  whichtree.rs
src/snapshots/: modali__parser__tests__load_config_file.snap  modali__parser__tests__load_ron_binding_file.snap  modali__tests__load_config_file.snap
