[package]
name = "modali"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.13.1"
iced_layershell = "0.13.6"
iced_runtime = "0.13.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "5.0"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
